Go-Kafka/k8s/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deployment
  labels:
    app: kafka-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-producer
  template:
    metadata:
      labels:
        app: kafka-producer
    spec:
      containers:
        - name: kafka-producer
          image: gcr.io/so1-proyecto-g17/kafka-producer:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
      app: kafka-producer
  type: LoadBalancer
  ports:
    - port: 8000
      protocol: TCP
